[package]
name = "creepy"
version = "0.1.0"
authors = ["goolord <zacharyachurchill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.24.1"
select = "0.4.3"
reqwest = "0.9.20"
scraper = "0.10.1"
toml = "0.5"
clap = "2.33.0"
robots_txt = "0.6"
serde = "1.0.101"
regex = "1.3.1"
serde_regex = "0.4.0"
url = "2.1.0"
