[package]
name = "creepy"
version = "0.1.0"
authors = ["goolord <zacharyachurchill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.*"
html5ever = "0.25.1"
log = "0.4.8"
rayon = "1.3.0"
ref-cast = "1.0.0"
regex = "1.3.3"
reqwest = "0.10.1"
robots_txt = "0.6.0"
scraper = "0.11.0"
select = "0.4.3"
serde = "1.0.104"
serde_regex = "0.4.0"
structopt = "0.3.21"
toml = "0.5.5"
url = { version = "2.1.1", features = ["serde"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
